my-apps/media/jellyseerr/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyseerr
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
