my-apps/media/jellyseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: jellyseerr
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 5055
    protocol: TCP
  selector:
    app: jellyseerr
