my-apps/media/jellyseerr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr
  namespace: jellyseerr
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Jellyseerr"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "sh-jellyseerr"
    gethomepage.dev/href: "https://request.serverops.live"
spec:
  hostnames:
  - request.serverops.live
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-internal
    namespace: gateway
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: jellyseerr
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
